# adaptive-fetch

./: .gitignore  .release-please-manifest.json  .worktreeinclude  CONTRIBUTING.md  Cargo.toml  PLATFORMS.md  README.md  codecov.yml  hooks.json  mise.toml  orca.yaml  release-please-config.json
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  release-please.yml  zizmor.yml
docs/rfcs/: 0001-adaptive-fetch.md
engine-src/: Cargo.toml
engine-src/src/: executor.rs  learning.rs  lib.rs  main.rs  options.rs  phase0.rs  presets.rs  result.rs  safety.rs  scheduler.rs  transport.rs  url_transforms.rs  validators.rs  waf_detector.rs
hooks/: webfetch-guard.sh
skills/adaptive-fetch/: SKILL.md  url_presets.toml
