[package]
name = "adaptive-fetch"
version = "0.0.0"
description = "Resilient, site-agnostic public-page reader: auto-bypasses blocked sites via browser TLS-fingerprint impersonation."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "adaptive-fetch"
path = "src/main.rs"

[lib]
name = "adaptive_fetch"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Engine dependencies land as their milestones are implemented (RFC 0001 §5):
#   M1: rquest/wreq (TLS impersonation), tokio, scraper, ipnet
#   M2: WAF profiles, url
# Kept out of M0 so the scaffold compiles fast and crate choices are pinned
# against real usage rather than guessed up front.
