[package]
name = "adaptive-fetch"
version = "0.0.0"
description = "Resilient, site-agnostic public-page reader: auto-bypasses blocked sites via browser TLS-fingerprint impersonation."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "adaptive-fetch"
path = "src/main.rs"

[lib]
name = "adaptive_fetch"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# M3 Phase 0 (Reddit .rss router) — plain feed/API GET, RFC 0001 §4.3, §4.7, §5.
tokio = { version = "1", features = ["rt", "net", "time"] }
# wreq links BoringSSL (boring-sys2) → needs CMake + libclang at build time.
# See README "Development" for the toolchain prerequisites.
wreq = "5"
url = "2"

# Remaining engine dependencies land as their milestones are implemented:
#   M1: scraper (success_selectors), ipnet (SSRF CIDR)
#   M2: wreq-util (browser-emulation diversity grid), WAF profiles
# Kept out until used so the scaffold compiles fast and crate choices are pinned
# against real usage rather than guessed up front.
